Version 5.8.1 - 28 Oktober 2014

- Fixed an overflow error in TCppParser.CheckForStructs that caused errors when opening/saving files.
- Fixed a crash in TEditorList.GetFocusedPageControl that fixes random crashes.

Version 5.8.0 - 21 Oktober 2014

- Added support for two file views next to each other.
- All windows are now opened at the centre of the main window instead of at random places across random monitors.
- Slightly improved performance of the function tooltip.
- Fixed a bug in makefile creation of C DLL's that prevented compilation.
- When compiling, header files are now treated separately from other files.
- Removed CVS support. CVS is considered deprecated, we recommend using explorer based code managers for alternatives like Git or SVN.
- Fixed a crash in the file change monitor code.

Version 5.7.1 - 29 Juli 2014

- Resolved errors in compile log when using Syntax Check on non-project compilations.
- One can now create precompiled headers when compiling non-project header files.
- Compile log now mentions the output filename under Compilation Results.
- Dev-C++ will now issue an error when compiling using a compiler set that does not have a valid binary directory.
- When a currently open file is renamed or deleted, one can now choose to close the editor of the file in question.
- Fixed a bug in "Shorten Compiler Paths" that mixed up library and binary paths.
- Attempt to fix a common crash related to TdevMonitorThread.TellToQuit.
- Reduced overdraw in the class browser when switching between or saving files.
- Added the ability to syntax check the currently visible file only, even if it belongs to a project.
- Added icons for Syntax Check, Syntax Check Current File and Clean
- Fixed an out of bounds problem in the parser.
- Dev-C++ now restores windows to their Aero Snap position.

Version 5.7.0 - 19 Juli 2014

- Redesigned Compiler Log.
- Added an option to shorten compiler paths in Compiler Log.