@@ -1,11 +1,13 @@
 1) Install the following packages by double clicking them and clicking on compile and/or install:
 
-.\VCL\DevCpp.dpk
-.\VCL\SynEditPackages\SynEdit_D7.dpk
-.\VCL\ClassBrowsing\ClassBrowsing.dpk
+Source\VCL\DevCpp.dpk
+Source\VCL\SynEditPackages\SynEdit_D7.dpk
+Source\VCL\ClassBrowsing\ClassBrowsing.dpk
 
-2) Compile resources: run .\CompileResources.bat to create binary .res files.
+2) Compile resources: run Source\CompileResources.bat to create binary .res files.
 
-3) Opening and using the main project file 'devcpp.dpr' should not bring up any 'not found' errors now.
+3) Create the folder Source\Units to allow Delphi to store its object files there. This empty folder is required but not commited by Git because it's empty. :(
 
-4) Other versions of Delphi should work, but I've only tested Delphi 7.
+4) Opening and using the main project file 'devcpp.dpr' should not bring up any 'Module Not Found' errors now.
+
+5) Other versions of Delphi should work, but I've only tested Delphi 7.
